# poly-trade-scan

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/: __init__.py  __main__.py  cli.py  constants.py  downloader.py
src/core/: block_processor.py  decoder.py  models.py
src/output/: __init__.py  formatters.py  writers.py
src/services/: __init__.py
src/services/trade_monitor/: __init__.py  __main__.py  monitor.py  run.py
